# Agentic-OS

./: .gitignore  AGENTS.md  AGENT_BLOCKING_ANALYSIS.md  ARCHITECTURE-MIGRATION-REPORT.md  ARCHITECTURE.md  BETA_LAUNCH_DECISION.md  BETA_ROADMAP_AND_COMPETITIVE_ANALYSIS.md  BROWSER_AUTOMATION_AUDIT.md  BROWSER_TOOL_SANITIZATION.md  CANCELLATION_TRACE.md  CLAUDE.md  CLOSED_BETA_SIGNOFF.md  CONTEXT_SYSTEM.md  DEAD-FILE-DELETION-REPORT.md  EXECUTION_FLOW.md  FAILURE_RECOVERY_REPORT.md  FINAL_FUNCTIONAL_VERIFICATION.md  FINAL_RELEASE_CHECKLIST.md  FINAL_RUNTIME_HEALTH_REPORT.md  FIRST_RESPONSE_BENCHMARK.md  FIRST_RUN_AUDIT_V2.md  FOLDER_TREE_ROOT_CAUSE.md  FULL_PRODUCT_AUDIT.md  LICENSE  LONG_SESSION_REPORT.md  PRD.md  PRODUCTION_READINESS_REPORT.md  PROVIDER_SYSTEM.md  PUBLIC_ALPHA_VALIDATION.md  PUBLIC_BETA_CANDIDATE_REPORT.md  RC1_READINESS_REPORT.md  README.md  REAL_WORLD_TASK_REPORT.md  RELEASE_BLOCKER_REPORT.md  RELEASE_GATE_DECISION.md  RELEASE_GATE_DECISION_V2.md  RUNTIME-ARCHITECTURE-AUDIT.md  RUNTIME-OWNERSHIP-REPORT.md  RUNTIME.md  SEARCH_RUNTIME_AUDIT.md  (+35 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: browser.rs  commands.rs  desktop.rs  git.rs  history.rs  lib.rs  updater.rs  watcher.rs
apps/desktop/src-tauri/src/provider/: commands.rs  detection.rs  discovery.rs  gateway.rs  mod.rs  models.rs
apps/desktop/src-tauri/src/sandbox/: command.rs  commands.rs  fs.rs  mod.rs  network.rs
apps/desktop/src-tauri/wix/: main.wxs
docs/: AGENT_CONFIGURATION_ARCHITECTURE.md  AGENT_CONFIGURATION_RUNTIME_MAP.md  ALPHA_FEEDBACK_PREPARATION.md  BETA_READINESS_FINAL.md  CAPABILITY_ENFORCEMENT_MATRIX.md  CHANGELOG_BETA2.md  CHAT_AND_WORKSPACE_REGRESSION_REPORT.md  CHAT_SIMPLIFICATION_MIGRATION.md  (+39 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: agenticos.desktop
src-tauri/nsis/: installer-hooks.nsh  installer.nsi
src-tauri/src/: lib.rs  main.rs
(+832 files in other folders)
